Changed some copy and car lighting

--- a/gallery.html
+++ b/gallery.html
@@ -21,7 +21,7 @@
 			<div class="white-bg-section"></div>
 			<div class="textbox">
 				<h1>Gallery</h1>
-				<h2>No Flash Photography!</h2>
+				<!-- <h2>No Flash Photography!</h2> -->
 			</div>
 
 			<img 	class="gallery-item left" src="assets/images/Mason_Powers_C8_Z06.jpg" alt="Corvette C8 Z06 In A Fall Garden Render">
