--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 		<div id="scroll-clip">
 			<div class="white-bg-section"></div>
 			<div class="textbox">
+				<!-- <h1>Hey Hey, I'm<br> Mason Powers.<br> I Build 3D Things</h1> -->
 				<h1>Hey Hey, I'm<br> Mason Powers.<br> I Create 3D Shit</h1>
 				<!-- <h1>Hey Hey, I'm<br> Mason Powers.<br> I Do Everything 3D</h1> -->
 			</div>
@@ -73,8 +74,8 @@
 			</svg> -->
 						  
 			<div class="floater left">
-				<h2>I Do 3D Visualization</h2>
-				<p>I make products pretty. Photorealistic renders and animations for ecommerce and marketing... or just to look at.</p>
+				<h2>I Make 3D Renders & Animations</h2>
+				<p>Product shots and videos that potential customers can't resist. Even I can't look away sometimes.</p>
 			</div>
 			<div class="floater right">
 				<h2>Product Design Background</h2>
@@ -82,15 +83,15 @@
 			</div>
 			<div class="floater left">
 				<h2>Web Hosted 3D Media</h2>
-				<p>I make little vertices rotate around in cyberspace. 3D is the future of the internet and you don't want to miss out.</p>
+				<p>I make little vertices rotate around in cyberspace. 3D is the future of the internet and you don't want to miss out!</p>
 			</div>
 			<div class="floater right">
 				<h2>Web Development & <br>UX Design</h2>
-				<p>HTML, CSS, & Javascript paired with responsive, fun, and modern UI design</p>
+				<p>HTML, CSS, and Javascript paired with responsive, fun, and modern UX design.</p>
 			</div>
 			<div class="floater left">
 				<h2>I'm Serious About Fun!</h2>
-				<p>Everything I create excites me. If my work doesn't have character then what's the point?</p>
+				<p>I looove learning new things and bring a lighthearted and passionate approach to everything I create.</p>
 			</div>
 			<hr class="floater">
 			<div class="spacer" style="height: 300vh;"></div>
