--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 						  
 			<div class="floater left">
 				<h2>I Make 3D Renders & Animations</h2>
-				<p>Product shots and videos that potential customers can't resist. Even I can't look away sometimes.</p>
+				<p>Product shots and videos that customers can't resist. Beautiful images for upcoming products, or scenarios that would be impossible to photograph traditionally.</p>
 			</div>
 			<div class="floater right">
 				<h2>Product Design Background</h2>
@@ -95,11 +95,12 @@
 			</div>
 			<hr class="floater">
 			<div class="spacer" style="height: 300vh;"></div>
+			<h2 id="dizzy-text">Alright the Lamborghini is getting dizzy. Go have a look at the gallery!</h2>
 			<div class="navbar">
 				<a class ="menu-item" href="#top">home</a>
 				<a class ="menu-item" href="./gallery">gallery</a>
 				<!-- <a class ="menu-item" href="./services">services</a> -->
-				<a class ="menu-item" href="./contact.html">contact</a>
+				<a class ="menu-item" href="./contact">contact</a>
 			</div>
 		</div>
 
@@ -113,8 +114,12 @@
 []===== TODO =====[]
 
 FIXES:
-Arrow doesnt move on mobile safari. replace w gif? better animation either way
-Horizontal scroll still a problem ??
+Better Contact Format
+
+Timeout for loading page
+
+
+Horizontal scroll still a problem idk??
 
 NAV BAR: 
 add semantic <nav>
@@ -131,11 +136,6 @@ CAR MODEL CHANGES
 		Soft Shadow
 	Finalize car color
 	#7c7bff
-
-Contact page:
-	headshot
-	more fun images of myself
-	contacts etc.
 
 Services Page:
 	Hosting 3D Media
