--- a/contact.html
+++ b/contact.html
@@ -17,33 +17,40 @@
 	</head>
 
 	<body id="body">
-		<img class="contact-photo" src="assets/images/Mason_Powes_Contact_Placeholder.JPG">
-		<!-- <button class="contact-button" type="button" onclick="window.location.href='https://linkedin.com/mason-powers-vt';">LinkedIn</button> -->
-		
-		<!-- <div class="spacer" style="height: 5vh;"></div> -->
-
-		<div class="contact-button">
-			<a class="email" href="">masonpowers46@gmail.com</a>
-		</div>
-
-		<div class="contact-button">
-			<svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
-			width="48" height="48"
-			viewBox="0 0 48 48">
-			<path fill="#0288D1" d="M42,37c0,2.762-2.238,5-5,5H11c-2.761,0-5-2.238-5-5V11c0-2.762,2.239-5,5-5h26c2.762,0,5,2.238,5,5V37z"></path><path fill="#FFF" d="M12 19H17V36H12zM14.485 17h-.028C12.965 17 12 15.888 12 14.499 12 13.08 12.995 12 14.514 12c1.521 0 2.458 1.08 2.486 2.499C17 15.887 16.035 17 14.485 17zM36 36h-5v-9.099c0-2.198-1.225-3.698-3.192-3.698-1.501 0-2.313 1.012-2.707 1.99C24.957 25.543 25 26.511 25 27v9h-5V19h5v2.616C25.721 20.5 26.85 19 29.738 19c3.578 0 6.261 2.25 6.261 7.274L36 36 36 36z"></path>
-			</svg>
+		<div id="contact-container">
+			<img class="contact-photo" src="assets/images/Mason_Powers_Contact_Photo.jpg">
 			
-			<a href="https://www.linkedin.com/in/mason-powers-vt/" target="_blank" rel="noopener noreferrer" >mason-powers-vt</a>
-		</div>
+			<div>
+				<div class="contact-button">
+					<svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" 
+					width="48" height="48" 
+					viewBox="0 0 48 48">
+					<path fill="#1e88e5" d="M34,42H14c-4.411,0-8-3.589-8-8V14c0-4.411,3.589-8,8-8h20c4.411,0,8,3.589,8,8v20 C42,38.411,38.411,42,34,42z"></path><path fill="#fff" d="M35.926,17.488L29.414,24l6.511,6.511C35.969,30.347,36,30.178,36,30V18 C36,17.822,35.969,17.653,35.926,17.488z M26.688,23.899l7.824-7.825C34.347,16.031,34.178,16,34,16H14 c-0.178,0-0.347,0.031-0.512,0.074l7.824,7.825C22.795,25.38,25.205,25.38,26.688,23.899z M24,27.009 c-1.44,0-2.873-0.542-3.99-1.605l-6.522,6.522C13.653,31.969,13.822,32,14,32h20c0.178,0,0.347-0.031,0.512-0.074l-6.522-6.522 C26.873,26.467,25.44,27.009,24,27.009z M12.074,17.488C12.031,17.653,12,17.822,12,18v12c0,0.178,0.031,0.347,0.074,0.512 L18.586,24L12.074,17.488z"></path>
+					</svg>
+					
+					<a href="">masonpowers46@gmail.com</a>
+				</div>
 
-		<div class="contact-button">
-			<svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
-			width="48" height="48"
-			viewBox="0 0 48 48">
-			<path fill="#FF3D00" d="M43.2,33.9c-0.4,2.1-2.1,3.7-4.2,4c-3.3,0.5-8.8,1.1-15,1.1c-6.1,0-11.6-0.6-15-1.1c-2.1-0.3-3.8-1.9-4.2-4C4.4,31.6,4,28.2,4,24c0-4.2,0.4-7.6,0.8-9.9c0.4-2.1,2.1-3.7,4.2-4C12.3,9.6,17.8,9,24,9c6.2,0,11.6,0.6,15,1.1c2.1,0.3,3.8,1.9,4.2,4c0.4,2.3,0.9,5.7,0.9,9.9C44,28.2,43.6,31.6,43.2,33.9z"></path><path fill="#FFF" d="M20 31L20 17 32 24z"></path>
-			</svg>
+				<div class="contact-button">
+					<svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
+					width="48" height="48"
+					viewBox="0 0 48 48">
+					<path fill="#0288D1" d="M42,37c0,2.762-2.238,5-5,5H11c-2.761,0-5-2.238-5-5V11c0-2.762,2.239-5,5-5h26c2.762,0,5,2.238,5,5V37z"></path><path fill="#FFF" d="M12 19H17V36H12zM14.485 17h-.028C12.965 17 12 15.888 12 14.499 12 13.08 12.995 12 14.514 12c1.521 0 2.458 1.08 2.486 2.499C17 15.887 16.035 17 14.485 17zM36 36h-5v-9.099c0-2.198-1.225-3.698-3.192-3.698-1.501 0-2.313 1.012-2.707 1.99C24.957 25.543 25 26.511 25 27v9h-5V19h5v2.616C25.721 20.5 26.85 19 29.738 19c3.578 0 6.261 2.25 6.261 7.274L36 36 36 36z"></path>
+					</svg>
+					
+					<a href="https://www.linkedin.com/in/mason-powers-vt/" target="_blank" rel="noopener noreferrer" >mason-powers-vt</a>
+				</div>
 
-			<a href="https://www.youtube.com/channel/UCqAGDm4whtvZGRiCcT-tFgA" target="_blank" rel="noopener noreferrer" >toluno</a>
+				<div class="contact-button">
+					<svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
+					width="48" height="48"
+					viewBox="0 0 48 48">
+					<path fill="#FF3D00" d="M43.2,33.9c-0.4,2.1-2.1,3.7-4.2,4c-3.3,0.5-8.8,1.1-15,1.1c-6.1,0-11.6-0.6-15-1.1c-2.1-0.3-3.8-1.9-4.2-4C4.4,31.6,4,28.2,4,24c0-4.2,0.4-7.6,0.8-9.9c0.4-2.1,2.1-3.7,4.2-4C12.3,9.6,17.8,9,24,9c6.2,0,11.6,0.6,15,1.1c2.1,0.3,3.8,1.9,4.2,4c0.4,2.3,0.9,5.7,0.9,9.9C44,28.2,43.6,31.6,43.2,33.9z"></path><path fill="#FFF" d="M20 31L20 17 32 24z"></path>
+					</svg>
+
+					<a href="https://www.youtube.com/channel/UCqAGDm4whtvZGRiCcT-tFgA" target="_blank" rel="noopener noreferrer" >toluno</a>
+				</div>
+			</div>
 		</div>
 
 		<div class="navbar">
