--- a/gallery.html
+++ b/gallery.html
@@ -29,7 +29,7 @@
 			<img 	class="gallery-item right" src="assets/images/Mason_Powers_C8_Z06_BTS.jpg" alt="Corvette C8 Z06 In A Fall Garden Clay Render Material Overide">
 			<p>Marketing image I created for a client. Work showcased: Material Shader Development, 3D Environment Design, Lighting Setup, Rendering, Compositing, Color Grading</p>
 
-			<img 	class="gallery-item left" src="assets/images/Mason_Powes_Porsche_Wing_Render.jpg" alt="Yellow Porsche 911 GT3 Render Banner">
+			<img 	class="gallery-item left" src="assets/images/Mason_Powers_Porsche_Wing_Render.jpg" alt="Yellow Porsche 911 GT3 Render Banner">
 			
 			<img 	class="gallery-item left" src="assets/images/Mason_Powers_Porsche_GT3_Airflow_Render.jpg" alt="Green Porsche 911 GT3 Render With Airflow Banner">
 			<p>Banner images I created for a website homepage. Work showcased: 3D Modeling, Material Shader Development, 3D Environment Design, Lighting Setup, Rendering, Compositing, Color Grading</p>
@@ -37,6 +37,9 @@
 			<img	class="gallery-item right" src="assets/images/Mason_Powers_VR_Headset.jpg" alt="VR Headset Floating Above Table Render">
 			<p>VR headset visualization personal project. Work showcased: 3D Modeling, Material Shader Development, Lighting Setup, Color Grading, Post Processing</p>
 			
+			<img 	class="gallery-item right" src="assets/images/Mason_Powers_C8_Corvette_Vertical.jpg" alt="Silver Corvette C8 Z06 In A Warehouse With Caustics Render">
+			<p>Marketing image created for social media. Work showcased: Material Shader Development, 3D Environment Design, Lighting Setup, Rendering, Compositing, Color Grading</p>
+
 			<iframe class="gallery-item right landscape" src="https://www.youtube.com/embed/vU2Qjg7E12c?autoplay=0&mute=0&loop=1&modestbranding=1"></iframe>
 			<p>Animation created to showcase the VR headset. Work showcased: 3D Modeling, Animation, Material Shader Development, 3D Environment Design, Compositing, Video Editing</p>
 			
