--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 			</div>
 			<div class="floater left">
 				<h2>I'm Serious About Fun!</h2>
-				<p>I looove learning new things and bring a lighthearted and passionate approach to everything I create.</p>
+				<p>I LOVE learning new things and bring a lighthearted and passionate approach to everything I create.</p>
 			</div>
 			<hr class="floater">
 			<div class="spacer" style="height: 300vh;"></div>
