--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 			<div class="white-bg-section"></div>
 			<div class="textbox">
 				<!-- <h1>Hey Hey, I'm<br> Mason Powers.<br> I Build 3D Things</h1> -->
-				<h1>Hey Hey, I'm<br> Mason Powers.<br> I Create 3D Shit</h1>
+				<h1>Hey Hey, I'm<br> Mason Powers.<br> I Create 3D Stuff</h1>
 				<!-- <h1>Hey Hey, I'm<br> Mason Powers.<br> I Do Everything 3D</h1> -->
 			</div>
 			<div id="model"></div>
