Changed Header Text

--- a/index.html
+++ b/index.html
@@ -40,38 +40,12 @@
 			<div class="white-bg-section"></div>
 			<div class="textbox">
 				<!-- <h1>Hey Hey, I'm<br> Mason Powers.<br> I Build 3D Things</h1> -->
-				<h1>Hey Hey, I'm<br> Mason Powers.<br> I Create 3D Stuff</h1>
+				<h1>Hey Hey, I'm<br> Mason Powers<br> I'm a Designer</h1>
 				<!-- <h1>Hey Hey, I'm<br> Mason Powers.<br> I Do Everything 3D</h1> -->
 			</div>
 			<div id="model"></div>
 			<div class="spacer" style="height: 8vh;"></div>
 
-			<!-- <svg class="scroll-icon" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
-			    <polyline points="0,50 50,100 100,50" fill="none" stroke-width="10%" stroke="#001b40">
-				
-					<animate
-						attributeName="points"
-						dur="1.5s"
-						values="
-						0,0 50,0 100,0; 		
-						0,50 50,100 100,50;  	
-						0,100 50,100 100,100; 							
-						0,0 50,0 100,0; 		
-						"
-
-						keySplines="
-						0.1 0.8 0.2 1;
-						0.2 0.2 0.8 0.8;
-						0.1 0.8 0.2 1;"
-						keyTimes="
-						0;0.5;0.85;1;"
-						calcMode="linear"
-
-						repeatCount="indefinite"
-					/>
-
-				</polyline>
-			</svg> -->
 						  
 			<div class="floater left">
 				<h2>I Make 3D Renders & Animations</h2>
