Added the projects page

--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
 
 		<div class="navbar">
 			<a class ="menu-item" href="./">home</a>
-			<a class ="menu-item" href="./gallery">gallery</a>
+			<a class ="menu-item" href="./projects">projects</a>
 			<!-- <a class ="menu-item" href="./services">services</a> -->
 			<a class ="menu-item" href="#top">contact</a>
 		</div>
