--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 	</head>
 	
 	<body id="body">
+
 		<section id="loading-page">
 			<div id="laoding-icons">
 				<h1 class="loading-text">Loading The Page...</h1>
@@ -34,53 +35,66 @@
 					<div class="loading-bar-fill"></div>
 				</div>
 			</div>
-
 		</section>
+
 		<div id="scroll-clip">
 			<div class="white-bg-section"></div>
 			<div class="textbox">
-				<!-- <h1>Hey Hey, I'm<br> Mason Powers.<br> I Build 3D Things</h1> -->
-				<h1>Hey Hey, I'm<br> Mason Powers<br> I'm a Designer</h1>
-				<!-- <h1>Hey Hey, I'm<br> Mason Powers.<br> I Do Everything 3D</h1> -->
+				<h1>Hey Hey, I'm<br>Mason Powers<br>I'm a Designer</h1>
 			</div>
 			<div id="model"></div>
 			<div class="spacer" style="height: 8vh;"></div>
 
 						  
 			<div class="floater left">
-				<h2>I Make 3D Renders & Animations</h2>
-				<p>Product shots and videos that customers can't resist. Beautiful images for upcoming products, or scenarios that would be impossible to photograph traditionally.</p>
+				<h2>3D Rendering and Graphic Design</h2>
+				<p>I create product renders and graphical layouts that customers can't resist. Beautiful images for upcoming products, or scenarios that would be impossible to photograph traditionally.</p>
+				<a class ="project-link" href="./projects">Graphics & 3D Projects ></a>
 			</div>
+
 			<div class="floater right">
-				<h2>Product Design Background</h2>
-				<p>I have a sharp eye for aesthetics, and a tight grasp on the entire design process.</p>
+				<h2>Video & Animation</h2>
+				<p>I bring my 3D models to life with animation and videos. I create motion graphics, special effects, and more.</p>
+				<a class ="project-link" href="./projects">Video & Animation Projects ></a>
 			</div>
+
 			<div class="floater left">
-				<h2>Web Hosted 3D Media</h2>
-				<p>I make little vertices rotate around in cyberspace. 3D is the future of the internet and you don't want to miss out!</p>
+				<h2>Website Design and Development</h2>
+				<p>HTML, CSS, and JavaScript paired with responsive, fun, and modern UX design. I also develop 3D web technologies using ThreeJS and WebXR.</p>
+				<a class ="project-link" href="./projects">Web Design Projects ></a>
 			</div>
+
 			<div class="floater right">
-				<h2>Web Development & <br>UX Design</h2>
-				<p>HTML, CSS, and Javascript paired with responsive, fun, and modern UX design.</p>
+				<h2>Software and Game Development</h2>
+				<p>I've been teaching myself game development since I was 13. I develop software for 2D, 3D, AR, VR, and mobile applications.</p>
+				<a class ="project-link" href="./projects">Software & Game Dev Projects ></a>
 			</div>
+
 			<div class="floater left">
 				<h2>I'm Serious About Fun!</h2>
-				<p>I LOVE learning new things and bring a lighthearted and passionate approach to everything I create.</p>
+				<p>I love learning new things and bring a lighthearted and passionate approach to everything I create.</p>
+				<a class ="project-link" href="./contact">Contact Me ></a>
 			</div>
-			<hr class="floater">
+
+			<div class="floater right">
+				<a class ="project-link-bold" href="./projects">View All Projects ></a>
+			</div>
+
+
+			<!-- <hr class="floater"> -->
 			<div class="spacer" style="height: 300vh;"></div>
-			<h2 id="dizzy-text">Alright the Lamborghini is getting dizzy. Go have a look at the gallery!</h2>
+			<h2 id="dizzy-text">Alright the Lamborghini is getting dizzy. Go have a look at my projects!</h2>
+			
 			<div class="navbar">
 				<a class ="menu-item" href="#top">home</a>
-				<a class ="menu-item" href="./gallery">gallery</a>
+				<a class ="menu-item" href="./projects">projects</a>
 				<!-- <a class ="menu-item" href="./services">services</a> -->
 				<a class ="menu-item" href="./contact">contact</a>
 			</div>
 		</div>
-
-		</div>
 	</body>
 </html>
+
 
 
 <!-- 
@@ -91,7 +105,6 @@ FIXES:
 Better Contact Format
 
 Timeout for loading page
-
 
 Horizontal scroll still a problem idk??
 
