made project links go to the right section

--- a/index.html
+++ b/index.html
@@ -49,25 +49,25 @@
 			<div class="floater left">
 				<h2>3D Rendering and Graphic Design</h2>
 				<p>I create product renders and graphical layouts that customers can't resist. Beautiful images for upcoming products, or scenarios that would be impossible to photograph traditionally.</p>
-				<a class ="project-link" href="./projects">Graphics & 3D Projects ></a>
+				<a class ="project-link" href="./projects.html#graphics-section">Graphics & 3D Projects ></a>
 			</div>
 
 			<div class="floater right">
 				<h2>Video & Animation</h2>
 				<p>I bring my 3D models to life with animation and videos. I create motion graphics, special effects, and more.</p>
-				<a class ="project-link" href="./projects">Video & Animation Projects ></a>
+				<a class ="project-link" href="./projects.html#video-section">Video & Animation Projects ></a>
 			</div>
 
 			<div class="floater left">
 				<h2>Website Design and Development</h2>
 				<p>HTML, CSS, and JavaScript paired with responsive, fun, and modern UX design. I also develop 3D web technologies using ThreeJS and WebXR.</p>
-				<a class ="project-link" href="./projects">Web Design Projects ></a>
+				<a class ="project-link" href="./projects.html#web-section">Web Design Projects ></a>
 			</div>
 
 			<div class="floater right">
 				<h2>Software and Game Development</h2>
 				<p>I've been teaching myself game development since I was 13. I develop software for 2D, 3D, AR, VR, and mobile applications.</p>
-				<a class ="project-link" href="./projects">Software & Game Dev Projects ></a>
+				<a class ="project-link" href="./projects.html#software-section">Software & Game Dev Projects ></a>
 			</div>
 
 			<div class="floater left">
