Made SEO changes. Added Vermen Page

--- a/gallery.html
+++ b/gallery.html
@@ -1,14 +1,19 @@
+<!-- ####################### -->
+<!--        OLD PAGE         -->
+<!-- ####################### -->
+
 <!DOCTYPE html>
 <html lang="en" id="top">
 	<head>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta http-equiv="X-UA-Compatible" content="ie=edge">
-		<meta name="description" content="Mason Powers Portfolio Site for 3D and Product Design" />
-
 		<title>Mason Powers Gallery</title>
+		<meta charset="UTF-8">
+		<meta http-equiv="X-UA-Compatible" content="ie=edge">
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="description" content="Mason Powers Portfolio of 3D Rendering, Web Development, Product Design, Animation, and Game Development" />
+
 		<link rel="icon" type="image/x-icon" href="favicon.ico">
-        <link rel="stylesheet" type="text/css" href="style.css" />
+        <link rel="stylesheet" type="text/css" href="index.css" />
         <link rel="stylesheet" type="text/css" href="style_gallery.css" />
 
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=DM Sans:400,700">
