--- a/contact.html
+++ b/contact.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="en" id="top">
 	<head>
+		<title>Mason Powers Contact | Design & Development</title>
 		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
-		<meta name="description" content="Mason Powers Portfolio Site for 3D and Product Design" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="description" content="Contact Mason Powers About 3D Rendering, Web Development, Product Design, Animation, and Game Development" />
 
-		<title>Mason Powers Contact</title>
 		<link rel="icon" type="image/x-icon" href="favicon.ico">
-        <link rel="stylesheet" type="text/css" href="style.css"/>
-        <link rel="stylesheet" type="text/css" href="style_contact.css"/>
+        <link rel="stylesheet" type="text/css" href="index.css"/>
+        <link rel="stylesheet" type="text/css" href="contact.css"/>
 
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=DM Sans:400,700">
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rokkitt:100,300">
