--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en" id="top">
 	<head>
+		<title>Mason Powers Portfolio | Design & Development</title>
 		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
-		<meta name="description" content="Mason Powers Portfolio Site for 3D and Product Design" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="description" content="Mason Powers Portfolio of 3D Rendering, Web Development, Product Design, Animation, and Game Development" />
 
-		<title>Mason Powers</title>
 		<link rel="icon" type="image/x-icon" href="favicon.ico">
-        <link rel="stylesheet" type="text/css" href="style.css" />
+        <link rel="stylesheet" type="text/css" href="index.css" />
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=DM Sans:400,700">
-		<!-- Roboto 100 400-->
 
 		<script async src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>
 		<script type="importmap">
