--- a/projects.html
+++ b/projects.html
@@ -1,18 +1,16 @@
 <!DOCTYPE html>
 <html lang="en" id="top">
 	<head>
+		<title>Mason Powers Projects | Design & Development</title>
 		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
-		<meta name="description" content="Mason Powers Portfolio Site for 3D and Product Design" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="description" content="Mason Powers Projects Include 3D Rendering, Web Development, Product Design, Animation, and Game Development" />
 
-		<title>Mason Powers Projects</title>
 		<link rel="icon" type="image/x-icon" href="favicon.ico">
         <link rel="stylesheet" type="text/css" href="projects.css" />
-		
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=DM Sans:200,600,900">
-
-
 
 		<script async src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>
 		<script type="importmap">
@@ -26,7 +24,6 @@
 			}
 		</script>
 		<script type="module" src="projects.js"></script>
-
 
 	</head>
 	
@@ -479,19 +476,6 @@
 				<a class ="menu-item" href="./contact">contact</a>
 			</div>
 			<div class="shadow"></div>
-
-			
-			
-			<!-- <div class="flexbox" >
-				<div class="flexitem-half" style="flex: 1 1 0;">
-					<h1>Hi Cesium Team!<br>I'm Mason &#128075</h1>
-					<h2>I'm a Philly based designer and developer focusing on 3D web interactions</h2>
-				</div>
-				<div class="flexitem-half">
-					<img class="gallery-item" src="assets/images/Mason_Powers_Headshot.jpg" alt="Mason Powers Headshot Against Green Wall Looking Off Camera">
-				</div>
-			</div>
-
 
 
 		</div>
