Finished Vermen Page and Added YT Vid Fixes

--- a/contact.html
+++ b/contact.html
@@ -68,11 +68,12 @@
 
 []===== TODO =====[]
 
-Add Photo of me peeking around a corner
+Add Another Photo
 
 LinkedIn
 Email
 Youtube
+Github !!!!!!!!!!!!
 Insta?
 
 -->
