--- a/index.html
+++ b/index.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html lang="en" id="top">
-	<head>
-		<title>Mason Powers Portfolio | Design & Development</title>
-		<meta charset="UTF-8">
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-		<meta http-equiv="X-UA-Compatible" content="ie=edge">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta name="description" content="Mason Powers Portfolio of 3D Rendering, Web Development, Product Design, Animation, and Game Development" />
 
-		<link rel="icon" type="image/x-icon" href="favicon.ico">
-        <link rel="stylesheet" type="text/css" href="index.css" />
-		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=DM Sans:400,700">
+<head>
+	<title>Mason Powers Portfolio | Design & Development</title>
+	<meta charset="UTF-8">
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description"
+		content="Mason Powers Portfolio of 3D Rendering, Web Development, Product Design, Animation, and Game Development" />
 
-		<script async src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>
-		<script type="importmap">
+	<link rel="icon" type="image/x-icon" href="favicon.ico">
+	<link rel="stylesheet" type="text/css" href="index.css" />
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=DM Sans:400,700">
+
+	<script async src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>
+	<script type="importmap">
 			{
 				"imports": {
 					"three": "https://cdn.jsdelivr.net/npm/three@0.145.0/build/three.module.js",
@@ -22,77 +24,114 @@
 				}
 			}
 		</script>
-		<script type="module" src="app.js"></script>
-
-	</head>
-	
-	<body id="body">
-
-		<section id="loading-page">
-			<div id="laoding-icons">
-				<h1 class="loading-text">Loading The Page...</h1>
-				<div class="loading-bar">
-					<div class="loading-bar-fill"></div>
-				</div>
-			</div>
-		</section>
-
-		<div id="scroll-clip">
-			<div class="white-bg-section"></div>
-			<div class="textbox">
-				<h1>Hey Hey, I'm<br>Mason Powers<br>I'm a Designer</h1>
-			</div>
-			<div id="model"></div>
-			<div class="spacer" style="height: 8vh;"></div>
-
-						  
-			<div class="floater left">
-				<h2>3D Rendering and Graphic Design</h2>
-				<p>I create product renders and graphical layouts that customers can't resist. Beautiful images for upcoming products, or scenarios that would be impossible to photograph traditionally.</p>
-				<a class ="project-link" href="./projects.html#graphics-section">Graphics & 3D Projects ></a>
-			</div>
-
-			<div class="floater right">
-				<h2>Video & Animation</h2>
-				<p>I bring my 3D models to life with animation and videos. I create motion graphics, special effects, and more.</p>
-				<a class ="project-link" href="./projects.html#video-section">Video & Animation Projects ></a>
-			</div>
-
-			<div class="floater left">
-				<h2>Website Design and Development</h2>
-				<p>HTML, CSS, and JavaScript paired with responsive, fun, and modern UX design. I also develop 3D web technologies using ThreeJS and WebXR.</p>
-				<a class ="project-link" href="./projects.html#web-section">Web Design Projects ></a>
-			</div>
-
-			<div class="floater right">
-				<h2>Software and Game Development</h2>
-				<p>I've been teaching myself game development since I was 13. I develop software for 2D, 3D, AR, VR, and mobile applications.</p>
-				<a class ="project-link" href="./projects.html#software-section">Software & Game Dev Projects ></a>
-			</div>
-
-			<div class="floater left">
-				<h2>I'm Serious About Fun!</h2>
-				<p>I love learning new things and bring a lighthearted and passionate approach to everything I create.</p>
-				<a class ="project-link" href="./contact">Contact Me ></a>
-			</div>
-
-			<div class="floater right">
-				<a class ="project-link-bold" href="./projects">View All Projects ></a>
-			</div>
+	<script type="module" src="app.js"></script>
 
 
-			<!-- <hr class="floater"> -->
-			<div class="spacer" style="height: 300vh;"></div>
-			<h2 id="dizzy-text">Alright the Lamborghini is getting dizzy. Go have a look at my projects!</h2>
-			
-			<div class="navbar">
-				<a class ="menu-item" href="#top">home</a>
-				<a class ="menu-item" href="./projects">projects</a>
-				<!-- <a class ="menu-item" href="./services">services</a> -->
-				<a class ="menu-item" href="./contact">contact</a>
+
+	<script type="application/ld+json">
+		{
+			"@context": "https://schema.org",
+			"@type": "Person",
+			"name": "Mason Powers",
+			"url": "https://www.masonpowers.com",
+			"image": "https://www.masonpowers.com/assets/images/Mason_Powers_Headshot.jpg",
+			"jobTitle": "Designer and Developer",
+			"description": "Mason Powers Does Work in 3D Rendering, Web Development, Product Design, Animation, and Game Development",
+			"sameAs": [
+				"https://www.linkedin.com/in/mason-powers-vt/",
+				"https://www.youtube.com/channel/UCqAGDm4whtvZGRiCcT-tFgA",
+				"https://github.com/tol-uno"
+			],
+			"email": "masonpowers46@gmail.com",
+			"alumniOf": {
+				"@type": "EducationalOccupationalCredential",
+				"name": "Drexel University"
+			},
+			"netWorth": {
+				"@type": "MonetaryAmount",
+				"value": "20000000",
+				"currency": "USD"
+			}
+		}
+	</script>
+
+
+
+
+</head>
+
+<body id="body">
+
+	<section id="loading-page">
+		<div id="laoding-icons">
+			<h1 class="loading-text">Loading The Page...</h1>
+			<div class="loading-bar">
+				<div class="loading-bar-fill"></div>
 			</div>
 		</div>
-	</body>
+	</section>
+
+	<div id="scroll-clip">
+		<div class="white-bg-section"></div>
+		<div class="textbox">
+			<h1>Hey Hey, I'm<br>Mason Powers<br>I'm a Designer</h1>
+		</div>
+		<div id="model"></div>
+		<div class="spacer" style="height: 8vh;"></div>
+
+
+		<div class="floater left">
+			<h2>3D Rendering and Graphic Design</h2>
+			<p>I create product renders and graphical layouts that customers can't resist. Beautiful images for upcoming
+				products, or scenarios that would be impossible to photograph traditionally.</p>
+			<a class="project-link" href="./projects.html#graphics-section">Graphics & 3D Projects ></a>
+		</div>
+
+		<div class="floater right">
+			<h2>Video & Animation</h2>
+			<p>I bring my 3D models to life with animation and videos. I create motion graphics, special effects, and
+				more.</p>
+			<a class="project-link" href="./projects.html#video-section">Video & Animation Projects ></a>
+		</div>
+
+		<div class="floater left">
+			<h2>Website Design and Development</h2>
+			<p>HTML, CSS, and JavaScript paired with responsive, fun, and modern UX design. I also develop 3D web
+				technologies using ThreeJS and WebXR.</p>
+			<a class="project-link" href="./projects.html#web-section">Web Design Projects ></a>
+		</div>
+
+		<div class="floater right">
+			<h2>Software and Game Development</h2>
+			<p>I've been teaching myself game development since I was 13. I develop software for 2D, 3D, AR, VR, and
+				mobile applications.</p>
+			<a class="project-link" href="./projects.html#software-section">Software & Game Dev Projects ></a>
+		</div>
+
+		<div class="floater left">
+			<h2>I'm Serious About Fun!</h2>
+			<p>I love learning new things and bring a lighthearted and passionate approach to everything I create.</p>
+			<a class="project-link" href="./contact">Contact Me ></a>
+		</div>
+
+		<div class="floater right">
+			<a class="project-link-bold" href="./projects">View All Projects ></a>
+		</div>
+
+
+		<!-- <hr class="floater"> -->
+		<div class="spacer" style="height: 300vh;"></div>
+		<h2 id="dizzy-text">Alright the Lamborghini is getting dizzy. Go have a look at my projects!</h2>
+
+		<div class="navbar">
+			<a class="menu-item" href="#top">home</a>
+			<a class="menu-item" href="./projects">projects</a>
+			<!-- <a class ="menu-item" href="./services">services</a> -->
+			<a class="menu-item" href="./contact">contact</a>
+		</div>
+	</div>
+</body>
+
 </html>
 
 
