--- a/projects.html
+++ b/projects.html
@@ -207,7 +207,7 @@
 						</p>
 					</div>
 					<div class="flexitem-half">
-						<iframe class="gallery-item landscape" src="https://www.youtube.com/embed/vU2Qjg7E12c?autoplay=0&mute=0&loop=1&modestbranding=1" alt="Shatter Reality"></iframe>
+						<iframe class="gallery-item landscape" src="https://www.youtube.com/embed/vU2Qjg7E12c?autoplay=0&mute=0&loop=1&modestbranding=1" alt="Shatter Reality" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 					</div>
 				</div>
 
@@ -237,10 +237,10 @@
 						</p>
 					</div>
 					<div class="flexitem-half">
-						<iframe class="gallery-item portrait" src="https://www.youtube.com/embed/ElEQ9QfnQZU?autoplay=0&mute=0&loop=1&modestbranding=1" alt="Wing Riser Comparison"></iframe>
+						<iframe class="gallery-item portrait" src="https://www.youtube.com/embed/ElEQ9QfnQZU?autoplay=0&mute=0&loop=1&modestbranding=1" alt="Wing Riser Comparison" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 					</div>
 					<div class="flexitem-half">
-						<iframe class="gallery-item portrait" src="https://www.youtube.com/embed/UlpmE9Ri-No?autoplay=0&mute=0&loop=1&modestbranding=1" alt="The Synthesis"></iframe>
+						<iframe class="gallery-item portrait" src="https://www.youtube.com/embed/UlpmE9Ri-No?autoplay=0&mute=0&loop=1&modestbranding=1" alt="The Synthesis" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 					</div>
 				</div>
 
@@ -254,7 +254,7 @@
 						</p>
 					</div>
 					<div class="flexitem-half">
-						<iframe class="gallery-item landscape" src="https://www.youtube.com/embed/yzRaG9paPQ4?autoplay=0&mute=0&loop=1&modestbranding=1" alt="Atlas Bar"></iframe>
+						<iframe class="gallery-item landscape" src="https://www.youtube.com/embed/yzRaG9paPQ4?autoplay=0&mute=0&loop=1&modestbranding=1" alt="Atlas Bar" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 					</div>
 				</div>
 
@@ -273,7 +273,7 @@
 						</p>
 					</div>
 					<div class="flexitem-half" style="flex:0.8">
-						<iframe class="gallery-item portrait" src="https://www.youtube.com/embed/k7djt0U9rZk?autoplay=0&mute=0&loop=1&modestbranding=1" alt="Door Above My Closet"></iframe>
+						<iframe class="gallery-item portrait" src="https://www.youtube.com/embed/k7djt0U9rZk?autoplay=0&mute=0&loop=1&modestbranding=1" alt="Door Above My Closet" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 					</div>
 					<div class="flexitem-half" style="flex:1.12">
 						<img class="gallery-item" src="assets/images/Mason_Powers_Small_Door_WIP.JPG" alt="WIP Screenshot of 3D Software Showing Room With a Door">
